Build scripts to generate Lua bindings using SWIG, the module is empty though

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ ENDIF()
 
 # Options
 OPTION(KARAZEH_BUILD_TESTS OFF "Build the tests")
+OPTION(KARAZEH_BUILD_LUA_BINDINGS ON "Build Lua bindings using SWIG")
 
 FIND_PACKAGE(Boost 1.46 COMPONENTS filesystem system REQUIRED)
 FIND_PACKAGE(CURL REQUIRED)
