--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,3 +48,7 @@ ELSE()
   ADD_LIBRARY(kzh SHARED ${Karazeh_SRCS})
 ENDIF()
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Karazeh_LIBRARIES} kzh)
+
+IF(KARAZEH_BUILD_LUA_BINDINGS)
+  ADD_SUBDIRECTORY(bindings/SWIG)
+ENDIF()
